меняет текст на главной странице

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <header class="page-header">
-      <div class="container">Контакты в шапке
+      <div class="container"irinbaro.space
   </div>
     </header>
 
@@ -23,7 +23,7 @@
       <h3>Я будущий SEO-человек</h3>
       <p>Я помогаю Эдику делать его работу</p>
       <h3>Еще мне нравится верстать.</h3>
-      <p>Я учу верстку второй день.</p></div>
+      <p>Я учу верстку третий день.</p></div>
     </section>
 
     <section class="portfolio">
@@ -37,7 +37,7 @@
     </section>
 
     <footer class="page-footer">
-     <div class="container"> Контакты в подвале</div>
+     <div class="container"> irinbaro.space</div>
     </footer>
   </body>
 </html>
