--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <header class="page-header">
-      <div class="container"irinbaro.space
+      <div class="container"irinbaro.space>
   </div>
     </header>
 
