добавляет изображения и ссылки

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 
   <body>
     <header class="page-header">
-      <div class="container">irinbaro.space
-  </div>
+      <div class="container">
+        <a title="сайт в разработке">irinbaro.space</a>
+      	<a class="header-email" title="42ba.rons@gmail.com" href="mailto:42ba.rons@gmail.com"42ba.rons@gmail.com></a>
+      	<a class="header-phone" title="+79200727974" href="tel:+79200727974"+79200727974></a>
+      </div>
     </header>
 
     <section class="hero-image">
@@ -20,6 +23,9 @@
 
     <section class="intro">
       <div class="container"><h2 class="subheading">Давайте познакомимся</h2>
+        <figure class="user-image">
+          <img src="files/me3.jpg" width=200 alt="SEO-стажер,Junior верстальщик">
+        </figure>
       <h3>Я будущий SEO-человек</h3>
       <p>Я помогаю Эдику делать его работу</p>
       <h3>Еще мне нравится верстать.</h3>
@@ -28,16 +34,25 @@
 
     <section class="portfolio">
       <div class="container"><h2 class="subheading">Мои работы</h2>
+        <figure class="project-image">
+          <img src="files/project.jpg" width=989 height=536 alt="Сайт инструктора Кекса">
+        </figure>
+
 
       <h3>Сайт инструктора Кекса</h3>
       <p>Небольшой лендинг о школе для начинающих.</p>
+      <a class="button" href="source/project/index.html">Открыть страницу</a>
 
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p></div>
     </section>
 
     <footer class="page-footer">
-     <div class="container"> irinbaro.space</div>
+     <div class="container"> 
+      <a title="сайт в разработке">irinbaro.space</a>
+      <a class="footer-email" href="mailto:42ba.rons@gmail.com">42ba.rons@gmail.com</a> 
+      <a class="footer-phone" href="tel:+79200727974">+79200727974</a>
+     </div>
     </footer>
   </body>
 </html>
