--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </figure>
       <h3>Я будущий SEO-человек</h3>
       <p>Я помогаю Эдику делать его работу</p>
-      <h3>Еще мне нравится верстать.</h3>
-      <p>Я учу верстку третий день.</p></div>
+      <h3>Еще мне нравится верстать</h3>
+      <p>Я учу верстку третий день</p></div>
     </section>
 
     <section class="portfolio">
@@ -41,7 +41,7 @@
 
       <h3>Сайт инструктора Кекса</h3>
       <p>Небольшой лендинг о школе для начинающих.</p>
-      <a class="button" href="source/project/index.html">Открыть страницу</a>
+      <a class="button" target="_blank" href="source/project/index.html">Открыть страницу</a>
 
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p></div>
