--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header class="page-header">
       <div class="container">
         <a title="сайт в разработке">irinbaro.space</a>
-      	<a class="header-email" title="42ba.rons@gmail.com" href="mailto:42ba.rons@gmail.com"42ba.rons@gmail.com></a>
-      	<a class="header-phone" title="+79200727974" href="tel:+79200727974"+79200727974></a>
+      	<a class="header-email" title="я сама вам напишу" href="mailto:я сама вам напишу"я сама вам напишу></a>
+      	<a class="header-phone" title="я сама вам позвоню" href="tel:я сама вам позвоню"я сама вам позвоню></a>
       </div>
     </header>
 
@@ -50,8 +50,8 @@
     <footer class="page-footer">
      <div class="container"> 
       <a title="сайт в разработке">irinbaro.space</a>
-      <a class="footer-email" href="mailto:42ba.rons@gmail.com">42ba.rons@gmail.com</a> 
-      <a class="footer-phone" href="tel:+79200727974">+79200727974</a>
+      <a class="footer-email" href="mailto:я сама вам напишу">я сама вам напишу</a> 
+      <a class="footer-phone" href="я сама вам позвоню">я сама вам позвоню</a>
      </div>
     </footer>
   </body>
