--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header class="page-header">
       <div class="container">
         <a title="сайт в разработке">irinbaro.space</a>
-      	<a class="header-email" title="я сама вам напишу" href="mailto:я сама вам напишу"я сама вам напишу></a>
-      	<a class="header-phone" title="я сама вам позвоню" href="tel:я сама вам позвоню"я сама вам позвоню></a>
+      	<a class="header-email" title="42ba.rons@gmail.com" href="mailto:42ba.rons@gmail.com"42ba.rons@gmail.com></a>
+      	<a class="header-phone" title="+79200727974" href="tel:+79200727974"+79200727974></a>
       </div>
     </header>
 
@@ -26,10 +26,24 @@
         <figure class="user-image">
           <img src="files/me3.jpg" width=200 alt="SEO-стажер,Junior верстальщик">
         </figure>
-      <h3>Я будущий SEO-человек</h3>
-      <p>Я помогаю Эдику делать его работу</p>
-      <h3>Еще мне нравится верстать</h3>
-      <p>Я учу верстку третий день</p></div>
+       <div>
+        <h3>Я будущий SEO-человек</h3>
+        <p>Я помогаю Эдику делать его работу</p>
+       </div>
+       <div>
+        <h3>Еще мне нравится верстать</h3>
+        <p>Я учу верстку третий день</p>
+       </div>
+       <div skills>
+       	<h3>Мои навыки</h3>
+       	<dl class="skills-list">
+       		<dt class="skills-html">HTML</dt>
+       		<dd class="level"><div style="width:60%;">60%</div></dd>
+       		<dt class="skilss-css">CSS</dt>
+       		<dd class="level"><div style="width:40%;">40%</div></dd>
+       	</dl>
+       </div>
+     </div>
     </section>
 
     <section class="portfolio">
@@ -48,10 +62,10 @@
     </section>
 
     <footer class="page-footer">
-     <div class="container">
-      <a class="footer-email" href="mailto:я сама вам напишу">я сама вам напишу</a> 
-      <a class="footer-phone" href="я сама вам позвоню">я сама вам позвоню</a>
+     <div class="container"> 
       <a title="сайт в разработке">irinbaro.space</a>
+      <a class="footer-email" href="mailto:42ba.rons@gmail.com">42ba.rons@gmail.com</a> 
+      <a class="footer-phone" href="tel:+79200727974">+79200727974</a>
      </div>
     </footer>
   </body>
